--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "description": "a decentralized app for founding a company",
   "main": "index.js",
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -12,25 +11,6 @@
   },
   "author": "FHWS-Crew",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "babel-loader": "^8.2.3",
-    "bootstrap": "^5.1.3",
-    "css-loader": "^6.5.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.3",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
-    "style-loader": "^3.3.1",
-    "truffle": "^5.4.24",
-    "web3": "^1.6.1",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
-  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,5 +19,27 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "dependencies": {
+    "@drizzle/react-plugin": "^1.5.3",
+    "@drizzle/store": "^1.5.3",
+    "@metamask/detect-provider": "^1.2.0",
+    "@openzeppelin/contracts": "^4.3.1",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "babel-register": "6.26.0",
+    "bootstrap": "4.3.1",
+    "mdb-react-ui-kit": "^1.6.0",
+    "mdb-ui-kit": "^3.9.0",
+    "react": "17.0.0",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "17.0.0",
+    "react-scripts": "^3.4.4",
+    "tailwindcss": "^3.0.7",
+    "truffle": "^5.1.65",
+    "web3": "^1.6.1"
+  }
 }
