--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
     "bootstrap": "4.3.1",
+    "ethers": "^5.5.3",
     "mdb-react-ui-kit": "^1.6.0",
     "mdb-ui-kit": "^3.9.0",
     "react": "17.0.0",
@@ -40,6 +41,7 @@
     "react-scripts": "^3.4.4",
     "tailwindcss": "^3.0.7",
     "truffle": "^5.1.65",
-    "web3": "^1.6.1"
+    "web3": "^1.6.1",
+    "zustand": "^3.6.9"
   }
 }
