--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "17.0.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^3.4.4",
     "tailwindcss": "^3.0.7",
     "truffle": "^5.1.65",
