--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@metamask/detect-provider": "^1.2.0",
+    "@metamask/detect-provider": "^2.0.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "5.3.3",
     "ethers": "^5.5.3",
-    "mdb-react-ui-kit": "^1.6.0",
-    "mdb-ui-kit": "^3.9.0",
-    "react": "17.0.0",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "17.0.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.4.4",
-    "truffle": "^5.1.65",
-    "web3": "^1.6.1",
-    "zustand": "^3.6.9"
+    "mdb-react-ui-kit": "^1.6",
+    "mdb-ui-kit": "^3.11.0",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^7.2.0",
+    "react-scripts": "^5.0.1",
+    "truffle": "^5.11.5",
+    "web3": "^4.16.0",
+    "zustand": "^4.5.6"
   }
 }
